# triage

./: .gitignore  CLAUDE.md  Dockerfile  README.md  cabal.project  triage.cabal
.claude/skills/prepare-commit/: SKILL.md
.claude/skills/readme-sync/: SKILL.md
.claude/skills/triage-api-codegen/: SKILL.md
.claude/skills/triage-api-codegen/references/: event-sourced.md  rest.md  servant-implementation.md
.claude/skills/triage-db-codegen/: SKILL.md
.claude/skills/triage-db-codegen/references/: persistence-pattern.md
.claude/skills/triage-service-codegen/: SKILL.md
.claude/skills/triage-ui-codegen/: SKILL.md
app/: Main.hs
docs/: decisions.md  domain-model.md  modeling-principles.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  theme.css  theme.ts
frontend/src/api/: client.ts  types.ts
frontend/src/api/queries/: calendar.ts  doctors.ts  (+4 more)
frontend/src/components/: AddEntityForm.tsx  ErrorBoundary.tsx  PriorityBadge.tsx
frontend/src/pages/: CalendarPage.tsx  DirectoryPage.tsx  IntakeRequestsPage.tsx  SlotsPage.tsx
migrations/: 0001_init.sql
skills/triage-api-codegen/: SKILL.md
skills/triage-api-codegen/references/: event-sourced.md  rest.md
skills/triage-db-codegen/: SKILL.md
skills/triage-db-codegen/references/: discriminator-column.md  document-store.md  schema.sql  side-tables.md
skills/triage-ui-codegen/: SKILL.md
skills/triage-ui-codegen/references/: state-to-affordance-mapping.md
src/: Api.hs  Domain.hs  Persistence.hs  Service.hs  Transport.hs
test/: Spec.hs
(+1 files in other folders)
